[package]
name = "beta"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "A blog entry transformer"
documentation = "https://gitlab.com/grauwoelfchen/beta"
repository = "https://gitlab.com/grauwoelfchen/beta"
homepage = "https://gitlab.com/grauwoelfchen/beta"
readme = "README.md"
keywords = ["cli", "text"]
categories = ["command-line-utilities", "text-processing"]
license = "Apache-2.0"
exclude = [
  "test/*",
  ".cargo-husky/*",
  "/.clippy.toml",
  "/.rustfmt.toml",
  "/.gitlab-ci.yml",
  "/.env.ci.sample",
]
edition = "2018"

[badges]
gitlab = { repository = "grauwoelfchen/beta", branch = "master" }

[lib]
name = "libbeta"
path = "src/lib.rs"

[[bin]]
name = "beta"
path = "src/main.rs"

[[bin]]
name = "beta-server"
path = "src/bin/server.rs"

[profile.release]
panic = "abort"

[dependencies]
futures = "0.3"
glob = "0.3.0"
handlebars = "3.0.1"
hyper = "0.13.*"
rst_parser = "0.3.1"
rst_renderer = "0.3.1"
serde = "*"
serde_derive = "*"
serde_json = "1.0.*"

[dependencies.tokio]
version = "0.2.*"
default-features = false
features = ["fs", "macros", "stream"]

[dependencies.tokio-util]
version = "0.3.1"
default-features = false
features = ["codec"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
