[package]
name = "nib-server"
version = "0.0.2"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
description = "A local server for a yet another static site generator Nib"
documentation = "https://gitlab.com/grauwoelfchen/nib"
repository = "https://gitlab.com/grauwoelfchen/nib"
homepage = "https://gitlab.com/grauwoelfchen/nib"
readme = "README.md"
keywords = ["server", "text"]
categories = ["text-processing", "web-programming::http-server"]
license = "Apache-2.0"
exclude = ["test/*"]
edition = "2018"

[badges]
gitlab = { repository = "grauwoelfchen/nib", branch = "master" }

[[bin]]
name = "nib-server"
path = "src/main.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
futures = "0.3"

[dependencies.hyper]
version = "0.14.*"
default-features = false
# https://docs.rs/hyper/latest/hyper/index.html#optional-features
features = ["http1", "runtime", "server", "stream"]

[dependencies.tokio]
version = "1.7.*"
default-features = false
# https://docs.rs/tokio/latest/tokio/index.html#feature-flags
features = ["fs", "macros", "rt", "rt-multi-thread"]

[dependencies.tokio-util]
version = "0.6.7"
default-features = false
features = ["codec"]
